# secrets-service_api

./: .gitignore  Dockerfile  Makefile  README.md  db.Dockerfile  docker-compose.yml  example.env  main.py  pyproject.toml
app/: __main__.py
app/api/: routes.py
app/api/v1/: generate_secret.py  get_secret.py
app/db/: pool.py
app/db/queries/sql/: secrets.sql
app/db/sql/: secrets.sql
app/services/: __init__.py  generate_secret.py  get_secrets.py  secret.py  security.py
app/utils/: __init__.py  container.py  context.py  logging.py  settings.py
scripts/: create_db.sql  create_table.sql  init_db.sql
tests/: conftest.py
tests/test_api/: test_api.py  test_errors_api.py
