[tool.poetry]
name = "secrets-service-api"
version = "0.1.0"
description = ""
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"
packages = [{include = "secrets_service_api"}]

[tool.poetry.dependencies]
python = "3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
asyncpg = "^0.26.0"
aiosql = "^6.5"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
